RESOLVED FIXED Bug 58641
CSP default-src is missing
https://bugs.webkit.org/show_bug.cgi?id=58641
Summary CSP default-src is missing
Adam Barth
Reported 2011-04-15 00:23:10 PDT
CSP default-src is missing
Attachments
Patch (17.74 KB, patch)
2011-05-01 15:17 PDT, Adam Barth
no flags
Patch for landing (17.21 KB, patch)
2011-05-01 16:31 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2011-05-01 15:17:33 PDT
Eric Seidel (no email)
Comment 2 2011-05-01 15:47:19 PDT
Comment on attachment 91850 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=91850&action=review OK. Please fix the test. > LayoutTests/http/tests/security/contentSecurityPolicy/default-src-inline-blocked.html:4 > +<meta http-equiv="X-WebKit-CSP" content="script-src 'self'"> default-src, not script-src.
Adam Barth
Comment 3 2011-05-01 16:31:35 PDT
Created attachment 91858 [details] Patch for landing
WebKit Commit Bot
Comment 4 2011-05-01 18:44:39 PDT
Comment on attachment 91858 [details] Patch for landing Clearing flags on attachment: 91858 Committed r85451: <http://trac.webkit.org/changeset/85451>
WebKit Commit Bot
Comment 5 2011-05-01 18:44:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.