2011-05-01  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        CSP default-src is missing
        https://bugs.webkit.org/show_bug.cgi?id=58641

        Test that default-src controls some scripting policy and that
        script-src, if present, overrides default-src.  In principle, we could
        test the interaction of default-src with every other directive, but
        that seems like overkill.

        * http/tests/security/contentSecurityPolicy/default-src-inline-allowed-expected.txt: Added.
        * http/tests/security/contentSecurityPolicy/default-src-inline-allowed.html: Added.
        * http/tests/security/contentSecurityPolicy/default-src-inline-blocked-expected.txt: Added.
        * http/tests/security/contentSecurityPolicy/default-src-inline-blocked.html: Added.
        * http/tests/security/contentSecurityPolicy/script-src-overrides-default-src-expected.txt: Added.
        * http/tests/security/contentSecurityPolicy/script-src-overrides-default-src.html: Added.
2011-05-01  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        CSP default-src is missing
        https://bugs.webkit.org/show_bug.cgi?id=58641

        Add support for default-src.  The default-src provides a default policy
        for every directive that sends in "-src".  If the more-specific
        directive is present, it takes precedence.  I also took this
        opportunity to refactor the internals of ContentSecurityPolicy a bit to
        reduce duplicate code.

        Tests: http/tests/security/contentSecurityPolicy/default-src-inline-allowed.html
               http/tests/security/contentSecurityPolicy/default-src-inline-blocked.html
               http/tests/security/contentSecurityPolicy/script-src-overrides-default-src.html

        * page/ContentSecurityPolicy.cpp:
        (WebCore::ContentSecurityPolicy::didReceiveHeader):
        (WebCore::ContentSecurityPolicy::checkEval):
        (WebCore::ContentSecurityPolicy::operativeDirective):
        (WebCore::ContentSecurityPolicy::checkInlineAndReportViolation):
        (WebCore::ContentSecurityPolicy::checkEvalAndReportViolation):
        (WebCore::ContentSecurityPolicy::checkSourceAndReportViolation):
        (WebCore::ContentSecurityPolicy::allowJavaScriptURLs):
        (WebCore::ContentSecurityPolicy::allowInlineEventHandlers):
        (WebCore::ContentSecurityPolicy::allowInlineScript):
        (WebCore::ContentSecurityPolicy::allowInlineStyle):
        (WebCore::ContentSecurityPolicy::allowEval):
        (WebCore::ContentSecurityPolicy::allowScriptFromSource):
        (WebCore::ContentSecurityPolicy::allowObjectFromSource):
        (WebCore::ContentSecurityPolicy::allowChildFrameFromSource):
        (WebCore::ContentSecurityPolicy::allowImageFromSource):
        (WebCore::ContentSecurityPolicy::allowStyleFromSource):
        (WebCore::ContentSecurityPolicy::allowFontFromSource):
        (WebCore::ContentSecurityPolicy::allowMediaFromSource):
        (WebCore::ContentSecurityPolicy::addDirective):
        * page/ContentSecurityPolicy.h:

Canonical link: https://commits.webkit.org/75156@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85451 268f45cc-cd09-0410-ab3c-d52691b4dbfc